maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:41: error: method isDirectionFree has return statement; needs result type
		return true
                ^Escaper:44: error: method isDirectionFree has return statement; needs result type
		return false
                ^